--- a/calci.html
+++ b/calci.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Realistic Calculator</title>
-  <link rel="stylesheet" href="calci.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="./calci.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <div class="calculator">
@@ -56,6 +56,6 @@
     </div>
   </div>
 
-  <script src="calci.js"></script>
+  <script src="./calci.js"></script>
 </body>
 </html>
